--- a/index.html
+++ b/index.html
@@ -26,43 +26,44 @@
         </ol>
     </div>
     <div class="block block3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate leo aliquam ligula commodo, non rutrum metus auctor. Sed quis blandit ante. Ut aliquam quam malesuada libero egestas scelerisque. Phasellus nulla quam, viverra et auctor consectetur, semper eu orci. Vivamus sit amet nisi feugiat, volutpat eros at, tristique urna. Vestibulum sed nisl sit amet diam luctus molestie. Cras malesuada dolor sed mi scelerisque gravida.</p>
-        <h2>Create a Carousel</h2>
+        <h1>Налаштуйте карусель</h1>
         <form id="carouselForm">
-            <label for="carouselCount">Number of items:</label>
-            <input type="number" id="carouselCount" min="1" required>
-            <button type="button" onclick="createCarousel()">Generate</button>
+            <label for="numSlides">Кількість слайдів:</label>
+            <input type="number" id="numSlides" name="numSlides" min="1" required>
+            <div id="slidesContainer"></div>
+            <button type="submit">Зберегти</button>
         </form>
-        <div id="carouselPreview"></div>
-        <button type="button" onclick="saveCarousel()">Save Carousel</button>
-    </div>
-    <script>
-        function createCarousel() {
-            const count = document.getElementById('carouselCount').value;
-            const preview = document.getElementById('carouselPreview');
-            preview.innerHTML = '';
 
-            for (let i = 1; i <= count; i++) {
-                const div = document.createElement('div');
-                div.className = 'carousel-item';
-                div.textContent = `Item ${i}`;
-                preview.appendChild(div);
-            }
-        }
+        <script>
+            const form = document.getElementById('carouselForm');
+            const slidesContainer = document.getElementById('slidesContainer');
+            const numSlidesInput = document.getElementById('numSlides');
 
-        async function saveCarousel() {
-            const items = [...document.querySelectorAll('.carousel-item')].map(item => item.textContent);
-            const response = await fetch('/save_carousel.php', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ items }),
+            numSlidesInput.addEventListener('input', () => {
+                slidesContainer.innerHTML = '';
+                const numSlides = parseInt(numSlidesInput.value, 10);
+                for (let i = 1; i <= numSlides; i++) {
+                    const slideInput = document.createElement('div');
+                    slideInput.innerHTML = `
+                    <label for="slide${i}">URL слайду ${i}:</label>
+                    <input type="text" id="slide${i}" name="slides[]" required>
+                `;
+                    slidesContainer.appendChild(slideInput);
+                }
             });
-            const result = await response.json();
-            alert(result.message);
-        }
-    </script>
+
+            form.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const formData = new FormData(form);
+                await fetch('save_carousel.php', {
+                    method: 'POST',
+                    body: formData,
+                });
+                alert('Карусель збережено!');
+            });
+        </script>
+    </div>
+
     <div class="block block4">
         <p>Integer hendrerit arcu nisi, aliquam scelerisque sem laoreet id. In consequat ipsum vel tortor ullamcorper, nec aliquam erat pellentesque. Duis metus purus, dictum ac dictum sit amet, luctus id nunc. Suspendisse eu nibh eu nibh fermentum fermentum id ut lacus. Etiam tincidunt justo id pellentesque gravida. Aliquam venenatis ultrices arcu nec fringilla. In eros sem, condimentum ac volutpat tempor, gravida eu lacus. In eget arcu sit amet justo posuere cursus eu eget leo. Donec tempus, turpis sit amet facilisis volutpat, augue arcu convallis nunc, eget tempor neque velit eget metus. Phasellus mollis eros eget nibh efficitur, ac dignissim mauris varius. Nam sodales ipsum risus, vel iaculis est dignissim a. Sed eu purus consectetur, consectetur sapien ut, semper arcu.</p>
         <div class="image-container">
