--- a/index_copy.html
+++ b/index_copy.html
@@ -26,32 +26,52 @@
         </ol>
     </div>
     <div class="block block3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate leo aliquam ligula commodo, non rutrum metus auctor. Sed quis blandit ante. Ut aliquam quam malesuada libero egestas scelerisque. Phasellus nulla quam, viverra et auctor consectetur, semper eu orci. Vivamus sit amet nisi feugiat, volutpat eros at, tristique urna. Vestibulum sed nisl sit amet diam luctus molestie. Cras malesuada dolor sed mi scelerisque gravida.</p>
-        <h2>Carousel</h2>
-        <div id="carouselContainer"></div>
+        <h1>Карусель</h1>
+        <div class="carousel-container">
+            <div class="carousel" id="carousel"></div>
+            <button class="carousel-control prev" onclick="prevSlide()">❮</button>
+            <button class="carousel-control next" onclick="nextSlide()">❯</button>
+        </div>
+
+        <script>
+            let currentIndex = 0;
+
+            async function fetchSlides() {
+                const response = await fetch('load_carousel.php');
+                const slides = await response.json();
+                const carousel = document.getElementById('carousel');
+                slides.forEach((slide, index) => {
+                    const div = document.createElement('div');
+                    div.classList.add('carousel-item');
+                    div.style.backgroundColor = index % 2 === 0 ? "#FFD8BE" : "#B8B8FF";
+                    div.innerHTML = `<p>${slide}</p>`;
+                    carousel.appendChild(div);
+                });
+                updateCarousel();
+            }
+
+            function updateCarousel() {
+                const carousel = document.querySelector('.carousel');
+                carousel.style.transform = `translateX(-${currentIndex * 100}%)`;
+            }
+
+            function prevSlide() {
+                const items = document.querySelectorAll('.carousel-item');
+                currentIndex = (currentIndex - 1 + items.length) % items.length;
+                updateCarousel();
+            }
+
+            function nextSlide() {
+                const items = document.querySelectorAll('.carousel-item');
+                currentIndex = (currentIndex + 1) % items.length;
+                updateCarousel();
+            }
+
+            // Завантаження слайдів після завантаження сторінки
+            window.onload = fetchSlides;
+        </script>
     </div>
-    <script>
-        async function fetchCarousel() {
-            const response = await fetch('/carousel_data.json');
-            const items = await response.json();
-            const container = document.getElementById('carouselContainer');
-            container.innerHTML = '';
 
-            items.forEach((item, index) => {
-                const div = document.createElement('div');
-                div.className = 'carousel-item';
-                div.textContent = item;
-                container.appendChild(div);
-            });
-        }
-
-        function periodicUpdate() {
-            setInterval(fetchCarousel, 5000);
-        }
-
-        fetchCarousel();
-        periodicUpdate();
-    </script>
     <div class="block block4">
         <p>Integer hendrerit arcu nisi, aliquam scelerisque sem laoreet id. In consequat ipsum vel tortor ullamcorper, nec aliquam erat pellentesque. Duis metus purus, dictum ac dictum sit amet, luctus id nunc. Suspendisse eu nibh eu nibh fermentum fermentum id ut lacus. Etiam tincidunt justo id pellentesque gravida. Aliquam venenatis ultrices arcu nec fringilla. In eros sem, condimentum ac volutpat tempor, gravida eu lacus. In eget arcu sit amet justo posuere cursus eu eget leo. Donec tempus, turpis sit amet facilisis volutpat, augue arcu convallis nunc, eget tempor neque velit eget metus. Phasellus mollis eros eget nibh efficitur, ac dignissim mauris varius. Nam sodales ipsum risus, vel iaculis est dignissim a. Sed eu purus consectetur, consectetur sapien ut, semper arcu.</p>
         <div class="image-container">
