--- a/index_copy.html
+++ b/index_copy.html
@@ -44,7 +44,13 @@
                     const div = document.createElement('div');
                     div.classList.add('carousel-item');
                     div.style.backgroundColor = index % 2 === 0 ? "#FFD8BE" : "#B8B8FF";
-                    div.innerHTML = `<p>${slide}</p>`;
+
+                    const link = document.createElement('a');
+                    link.href = slide.url;
+                    link.target = "_blank";
+                    link.textContent = slide.text;
+
+                    div.appendChild(link);
                     carousel.appendChild(div);
                 });
                 updateCarousel();
@@ -67,7 +73,6 @@
                 updateCarousel();
             }
 
-            // Завантаження слайдів після завантаження сторінки
             window.onload = fetchSlides;
         </script>
     </div>
