--- a/index_copy.html
+++ b/index_copy.html
@@ -49,7 +49,7 @@
                         div.style.backgroundColor = index % 2 === 0 ? "#FFD8BE" : "#B8B8FF";
 
                         const link = document.createElement('a');
-                        link.href = slide.href;
+                        link.href = slide;
                         link.target = "_blank";
                         link.textContent = slide.text;
 
