--- a/index_copy.html
+++ b/index_copy.html
@@ -48,17 +48,12 @@
                         div.classList.add('carousel-item');
                         div.style.backgroundColor = index % 2 === 0 ? "#FFD8BE" : "#B8B8FF";
 
-                        const title = document.createElement('div');
-                        title.textContent = `Слайд ${index + 1}`;
-                        title.style.fontWeight = "bold";
-                        title.style.marginBottom = "10px";
-
                         const link = document.createElement('a');
                         link.href = slide;
                         link.target = "_blank";
                         link.textContent = slide.text;
+                        link.textContent = `Слайд ${index + 1}`;
 
-                        div.appendChild(title);
                         div.appendChild(link);
 
                         carousel.appendChild(div);
